Added some documentation

--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -4,4 +4,5 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{src/\mbox{\hyperlink{read__nordic_8py}{read\+\_\+nordic.\+py}} }{\pageref{read__nordic_8py}}{}
 \item\contentsline{section}{src/\mbox{\hyperlink{select__eq_8py}{select\+\_\+eq.\+py}} }{\pageref{select__eq_8py}}{}
 \item\contentsline{section}{src/\mbox{\hyperlink{station__list_8py}{station\+\_\+list.\+py}} }{\pageref{station__list_8py}}{}
+\item\contentsline{section}{src/\mbox{\hyperlink{station__stats_8py}{station\+\_\+stats.\+py}} }{\pageref{station__stats_8py}}{}
 \end{DoxyCompactList}
