--- a/docs/latex/namespaces.tex
+++ b/docs/latex/namespaces.tex
@@ -4,4 +4,5 @@ Here are the packages with brief descriptions (if available)\+:\begin{DoxyCompac
 \item\contentsline{section}{\mbox{\hyperlink{namespaceread__nordic}{read\+\_\+nordic}} }{\pageref{namespaceread__nordic}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceselect__eq}{select\+\_\+eq}} }{\pageref{namespaceselect__eq}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespacestation__list}{station\+\_\+list}} }{\pageref{namespacestation__list}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespacestation__stats}{station\+\_\+stats}} }{\pageref{namespacestation__stats}}{}
 \end{DoxyCompactList}
