--- a/docs/latex/nordic_8py.tex
+++ b/docs/latex/nordic_8py.tex
@@ -18,6 +18,6 @@ class \mbox{\hyperlink{classnordic_1_1_phase__pick}{nordic.\+Phase\+\_\+pick}}
 def \mbox{\hyperlink{namespacenordic_ae739882df35f008abbf75d841c55c9a0}{nordic.\+read\+\_\+line1}} (line)
 \begin{DoxyCompactList}\small\item\em Function read\+\_\+line1. \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespacenordic_a30db7f3b3a04f63be7a8549e6bdcde96}{nordic.\+read\+\_\+lineH}} (line)
-\item 
+\begin{DoxyCompactList}\small\item\em Function read\+\_\+lineH. \end{DoxyCompactList}\item 
 def \mbox{\hyperlink{namespacenordic_a88e5f487e37a978b4b44f2662680aaf5}{nordic.\+read\+\_\+line4}} (line)
 \begin{DoxyCompactList}\small\item\em Function read\+\_\+line4. \end{DoxyCompactList}\end{DoxyCompactItemize}
