--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -190,6 +190,7 @@
 \input{namespaceread__nordic}
 \input{namespaceselect__eq}
 \input{namespacestation__list}
+\input{namespacestation__stats}
 \chapter{Class Documentation}
 \input{classnordic_1_1_hypocenter}
 \input{classnordic_1_1_phase__pick}
@@ -199,6 +200,7 @@
 \input{read__nordic_8py}
 \input{select__eq_8py}
 \input{station__list_8py}
+\input{station__stats_8py}
 \input{_t_o-_d_o_8txt}
 %--- End generated contents ---
 
