--- a/docs/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/docs/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -10,4 +10,6 @@ file \mbox{\hyperlink{read__nordic_8py}{read\+\_\+nordic.\+py}}
 file \mbox{\hyperlink{select__eq_8py}{select\+\_\+eq.\+py}}
 \item 
 file \mbox{\hyperlink{station__list_8py}{station\+\_\+list.\+py}}
+\item 
+file \mbox{\hyperlink{station__stats_8py}{station\+\_\+stats.\+py}}
 \end{DoxyCompactItemize}
