Added documentation for data class Hypocenter

--- a/docs/latex/classnordic_1_1_hypocenter.tex
+++ b/docs/latex/classnordic_1_1_hypocenter.tex
@@ -11,6 +11,32 @@
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+\begin{DoxyVerb}A data class used to represent the information in the hypocenter line (format 1)
+of a SEISAN S-file in Nordic format
+
+Attributes
+----------
+year : int
+    year of event origin time
+month : int
+    month of event origin time
+day : int
+    yday of event origin time
+hour : int
+    hour of event origin time
+minute : int
+    year of event origin time
+second : float
+    year of event origin time
+latitude : float
+    latitude of the event epicenter in degrees (positive in the northern hemisphere)
+longitude : float
+    latitude of the event epicenter in degrees (positive in the eastern hemisphere)
+depth : float
+    focal depth of the event hypocenter in km (positive if below sea level)\end{DoxyVerb}
+ 
+
 \doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{classnordic_1_1_hypocenter_a0904d656ec1027a4c88667ebcce1be69}\label{classnordic_1_1_hypocenter_a0904d656ec1027a4c88667ebcce1be69}} 
 \index{nordic.Hypocenter@{nordic.Hypocenter}!float@{float}}
