--- a/docs/latex/classnordic_1_1_phase__pick.tex
+++ b/docs/latex/classnordic_1_1_phase__pick.tex
@@ -11,6 +11,12 @@
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+\begin{DoxyVerb}A data class used to represent the information in the phase reading line (format 4)
+of a SEISAN S-file in Nordic format
+\end{DoxyVerb}
+ 
+
 \doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{classnordic_1_1_phase__pick_a59a9db9558635ccdcbf01879eca913c5}\label{classnordic_1_1_phase__pick_a59a9db9558635ccdcbf01879eca913c5}} 
 \index{nordic.Phase\_pick@{nordic.Phase\_pick}!float@{float}}
